--- a/www/index.html
+++ b/www/index.html
@@ -24,14 +24,14 @@
     <body>
         <div id="gameDiv"></div>
 		<script type="text/javascript" src="cordova.js"></script>
-		<script type="text/javascript" src="js/boot.js"></script>
-		<script type="text/javascript" src="js/load.js"></script>
-		<script type="text/javascript" src="js/instructions.js"></script>
-		<script type="text/javascript" src="js/lose.js"></script>
-		<script type="text/javascript" src="js/menu.js"></script>
-		<script type="text/javascript" src="js/play.js"></script>
-		<script type="text/javascript" src="js/ball.js"></script>
-		<script type="text/javascript" src="js/win.js"></script>
-		<script type="text/javascript" src="js/game.js"></script>
+		<script type="module" src="js/boot.js"></script>
+		<script type="module" src="js/load.js"></script>
+		<script type="module" src="js/instructions.js"></script>
+		<script type="module" src="js/lose.js"></script>
+		<script type="module" src="js/menu.js"></script>
+		<script type="module" src="js/play.js"></script>
+		<script type="module" src="js/ball.js"></script>
+		<script type="module" src="js/win.js"></script>
+		<script type="module" src="js/game.js"></script>
     </body>
 </html>
