realized I forgot to 'add' the ball file! (I also completed the ball class)

--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,7 @@
 		<script type="module" src="js/menu.js"></script>
 		<script type="module" src="js/play.js"></script>
 		<script type="module" src="js/ball.js"></script>
+		<script type="module" src="js/arrow.js"></script>
 		<script type="module" src="js/win.js"></script>
 		<script type="module" src="js/game.js"></script>
     </body>
